--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,9 @@ buck-out/
 */fastlane/report.xml
 */fastlane/Preview.html
 */fastlane/screenshots
+
+---OWN SETUP---
+bfg-1.13.0.jar
+private
+.gitignore
+
